# fluffy-robot

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_REQUIREMENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  swap_test.py
.github/workflows/: test.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: deferred-work.md  sprint-status.yaml
_bmad-output/implementation-artifacts/stories/: 0-005-ci-cd-pipeline-setup.md  0-006-docker-setup.md  1-001-project-structure-setup.md  1-002-environment-configuration.md  1-003-infrastructure-jupiter-client.md  1-004-infrastructure-solana-client.md  2-010-domain-models-price-market-data.md  2-011-domain-models-balance-portfolio.md  2-012-domain-models-trade-decision.md  2-013-price-fetcher-service.md  2-014-balance-tracker-service.md  2-015-trade-executor-service.md  2-016-wallet-management.md  2-017-main-trading-loop-with-multi-pair-support.md
_bmad-output/planning-artifacts/architecture-trading-bot-2026-06-30/: .memlog.md  ARCHITECTURE-SPINE.md
_bmad-output/planning-artifacts/epics-and-stories-2026-06-30/: .memlog.md  EPICS-AND-STORIES.md
_bmad-output/planning-artifacts/prd-trading-bot-2026-06-30/: .memlog.md  addendum.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: indicators.yaml  main.yaml  risk_management.yaml  strategies.yaml  trading.yaml
config/dev/: main.yaml
config/prod/: main.yaml
config/test/: main.yaml
src/: __init__.py  __main__.py  cli.py
src/application/: __init__.py
src/application/services/: __init__.py
src/application/use_cases/: __init__.py
src/config/: __init__.py  config_loader.py  settings.py  trading_config.py
src/core/: __init__.py
src/core/indicators/: __init__.py
src/core/models/: __init__.py  balance.py  price.py  trade.py
src/core/services/: __init__.py  balance_tracker.py  price_fetcher.py  trade_executor.py
src/core/strategies/: __init__.py
src/core/utils/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/jupiter/: __init__.py  client.py
src/infrastructure/solana/: __init__.py  client.py  wallet.py
src/interfaces/: __init__.py
src/interfaces/jupiter/: __init__.py  client.py
src/interfaces/repositories/: __init__.py
src/interfaces/solana/: __init__.py  client.py
src/utils/: load_env.py
tests/: __init__.py  test_basic.py  test_simple.py
tests/integration/: __init__.py  test_integration_placeholder.py  test_main_trading_loop.py
tests/unit/: __init__.py  test_config.py  test_jupiter_client.py  test_solana_client.py
tests/unit/core/models/: test_balance.py  test_price.py  test_trade.py
tests/unit/core/services/: __init__.py  test_balance_tracker.py  test_price_fetcher.py  test_trade_executor.py
tests/unit/infrastructure/solana/: test_wallet.py
